--- a/MOD_3_SOL/css/style.css
+++ b/MOD_3_SOL/css/style.css
@@ -2,7 +2,7 @@ body {
   font-size: 16px;
   color: black;
   background-color:pink ;
-  font-family: 'Oxygen', sans-serif;
+  font-family: Comic Sans MS;
 
 }
 .navbar-header button.navbar-toggle, .navbar-header .icon-bar {
