--- a/MOD_3_SOL/css/style.css
+++ b/MOD_3_SOL/css/style.css
@@ -86,7 +86,7 @@ h2{
   vertical-align: middle;
 }
 #collapsable-nav a{
-    background-color:pink;
+    background-color:yellow;
 	color:black;
 	font-weight: bold
 }
